--- a/HavenVanAntwerpen/notebook.ipynb
+++ b/HavenVanAntwerpen/notebook.ipynb
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {
     "tags": [
      "outputPrepend"
@@ -498,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -509,97 +509,19 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "sdata = pd.read_csv(\"output.csv\",sep=',',names=[\"shipid\",\"routeid\",\"startLongitude\",\"startLatitude\",\"endlongitude\",\"endlatitude\",\"timedelta\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sdata=sdata[sdata.timedelta!=0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sdata=sdata[sdata.timedelta>0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "    shipid  routeid  startLongitude  startLatitude  endlongitude  endlatitude  \\\n",
-       "0      126        1        3.212845      51.316830      3.212863    51.316753   \n",
-       "3      224        4        3.763512      52.018326      3.825448    52.001163   \n",
-       "4      224        5        3.840682      52.001465      3.858673    52.001762   \n",
-       "5      224        6        3.873283      52.001999      3.889362    52.002422   \n",
-       "11     224        3        3.997785      51.997833      4.012037    51.995899   \n",
-       "12     224        4        4.028650      51.992615      4.046670    51.988098   \n",
-       "13     224        5        4.062913      51.983406      4.117155    51.967014   \n",
-       "19     224        1        3.976485      52.028015      3.964532    52.035114   \n",
-       "20     224        2        3.952788      52.040504      3.924915    52.048660   \n",
-       "23     224        3        3.795045      52.014248      3.812403    52.011993   \n",
-       "\n",
-       "    timedelta  \n",
-       "0   92879.550  \n",
-       "3    1086.630  \n",
-       "4     159.390  \n",
-       "5     141.986  \n",
-       "11    137.470  \n",
-       "12    193.390  \n",
-       "13    714.003  \n",
-       "19    138.660  \n",
-       "20    256.190  \n",
-       "23    145.626  "
-      ],
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>shipid</th>\n      <th>routeid</th>\n      <th>startLongitude</th>\n      <th>startLatitude</th>\n      <th>endlongitude</th>\n      <th>endlatitude</th>\n      <th>timedelta</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>126</td>\n      <td>1</td>\n      <td>3.212845</td>\n      <td>51.316830</td>\n      <td>3.212863</td>\n      <td>51.316753</td>\n      <td>92879.550</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>224</td>\n      <td>4</td>\n      <td>3.763512</td>\n      <td>52.018326</td>\n      <td>3.825448</td>\n      <td>52.001163</td>\n      <td>1086.630</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>224</td>\n      <td>5</td>\n      <td>3.840682</td>\n      <td>52.001465</td>\n      <td>3.858673</td>\n      <td>52.001762</td>\n      <td>159.390</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>224</td>\n      <td>6</td>\n      <td>3.873283</td>\n      <td>52.001999</td>\n      <td>3.889362</td>\n      <td>52.002422</td>\n      <td>141.986</td>\n    </tr>\n    <tr>\n      <th>11</th>\n      <td>224</td>\n      <td>3</td>\n      <td>3.997785</td>\n      <td>51.997833</td>\n      <td>4.012037</td>\n      <td>51.995899</td>\n      <td>137.470</td>\n    </tr>\n    <tr>\n      <th>12</th>\n      <td>224</td>\n      <td>4</td>\n      <td>4.028650</td>\n      <td>51.992615</td>\n      <td>4.046670</td>\n      <td>51.988098</td>\n      <td>193.390</td>\n    </tr>\n    <tr>\n      <th>13</th>\n      <td>224</td>\n      <td>5</td>\n      <td>4.062913</td>\n      <td>51.983406</td>\n      <td>4.117155</td>\n      <td>51.967014</td>\n      <td>714.003</td>\n    </tr>\n    <tr>\n      <th>19</th>\n      <td>224</td>\n      <td>1</td>\n      <td>3.976485</td>\n      <td>52.028015</td>\n      <td>3.964532</td>\n      <td>52.035114</td>\n      <td>138.660</td>\n    </tr>\n    <tr>\n      <th>20</th>\n      <td>224</td>\n      <td>2</td>\n      <td>3.952788</td>\n      <td>52.040504</td>\n      <td>3.924915</td>\n      <td>52.048660</td>\n      <td>256.190</td>\n    </tr>\n    <tr>\n      <th>23</th>\n      <td>224</td>\n      <td>3</td>\n      <td>3.795045</td>\n      <td>52.014248</td>\n      <td>3.812403</td>\n      <td>52.011993</td>\n      <td>145.626</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
-     },
-     "metadata": {},
-     "execution_count": 18
-    }
+    "to do;\n",
+    "\n",
+    "met pandas alle rijen eruit halen waar de tijddelta 0 of negatief is\n",
+    "\n",
+    "kolomnamen toevoegen\n",
+    "\n",
+    "context schrijven\n",
+    "\n",
+    "neuraal netwerk maken op de output file die de eindbestemming van het schip kan voorspellen"
    ],
-   "source": [
-    "sdata.head(10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sdata.to_csv(r'processeddata.csv',sep='\\t', index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "metadata": {}
   }
  ]
 }
